# AcademyX

./: README.md
app/backend/: .env.example  .gitignore  alembic.ini  pyproject.toml
app/backend/alembic/: env.py
app/backend/alembic/versions/: a52069f507fc_initial.py
app/backend/backend/: __init__.py  main.py
app/backend/backend/controllers/: landing.py  reviews.py  surfing.py  uploads.py
app/backend/backend/core/: settings.py
app/backend/backend/database/: session.py
app/backend/backend/models/: models.py
app/backend/backend/routes/: landingroutes.py  surfingroutes.py  uploadroutes.py
app/backend/backend/schemas/: uploads.py
app/frontend/: package-lock.json  package.json  tailwind.config.ts
app/frontend/app/: Content.tsx
app/frontend/src/app/: layout.tsx  page.tsx
